1.4-6/9/2025